# ComfyUI-AudioSR

./: LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  vasr_node.py
versatile_audio_super_resolution/audiosr/: pipeline.py  utils.py
versatile_audio_super_resolution/audiosr/clap/training/: data.py
versatile_audio_super_resolution/audiosr/latent_diffusion/models/: ddim.py  ddpm.py  plms.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/: attention.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/audiomae/: AudioMAE.py  models_mae.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/diffusionmodules/: model.py  openaimodel.py  util.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/encoders/: modules.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/phoneme_encoder/: attentions.py  encoder.py
versatile_audio_super_resolution/audiosr/latent_diffusion/modules/phoneme_encoder/text/: __init__.py
versatile_audio_super_resolution/audiosr/latent_encoder/: autoencoder.py
versatile_audio_super_resolution/audiosr/utilities/: model.py
versatile_audio_super_resolution/audiosr/utilities/audio/: stft.py  tools.py
versatile_audio_super_resolution/audiosr/utilities/data/: dataset.py
workflows/: AudioSR_example_workflow.json
